Testing out different things

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="p0">
+  <div class="p0 m0">
     <div class="grd-row">
       <div class="grd-row-col-6">
         <ul class="contact-list">
