--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,8 +10,8 @@
  */
 body {
     color: $text-color;
-    background-color: white;
-    background-image: url('../img/clean-gray-paper.png');
+    background-color: #dfdfdf;
+    /* background-image: url('../img/clean-gray-paper.png'); */
 }
 
 /**
