--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -9,8 +9,12 @@
         font-family: 'Raleway', sans-serif;
         font-weight: 900;
         font-size: 1.6rem;
+        a {
+            text-decoration: none;
+        }
     }
     dd {
         margin-left: .5rem;
     }
+    
 }
