--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,8 @@ $grey-color: #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark: darken($grey-color, 25%);
 $purple: #220055;
-$pink: #de87cd;
+$purple1: #7A3E48;
+$pink: #B256A1;
 $text-color: $grey-color-dark;
 $link-color: $purple;
 
