--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,15 @@
 <header>
-  <div class="p0">
+  <div class="p0 m0">
     <div class="grd-row">
-      <div class="grd-row-col-4-6 left-header">
-        <h2>
-          {{ page.title | default: 'Welcome!' }}
-        </h2>
-      </div>
-      <div class="grd-row-col-2-6 txt--center right-header">
-        <h1>{{ site.title }}</h1>
-        <h2><span class="flip">Clip</span>pedCom<span class="flip">pound</span></h2>
+      <div class="grd-row-col-6-6 left-header">
+        <h1>
+          carson@container:{{ page.url }} - {{ page.description }} (bash)
+        </h1>
       </div>
     </div>
   </div>
 </header>
+<div id="bg-img" class="txt--center">
+  <h1>{{ site.title }}</h1>
+  <h2><span class="flip">Clip</span>pedCom<span class="flip">pound</span></h2>
+</div>
