--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,20 +1,13 @@
 // Styles for index page
-.index-base {
+section div .root {
     dl {
         -webkit-columns: 20px 3;
         -moz-columns: 20px 3;
         columns: 20px 3;
     }
-    dt {
-        font-family: 'Raleway', sans-serif;
-        font-weight: 900;
-        font-size: 1.6rem;
-        a {
-            text-decoration: none;
-        }
-    }
     dd {
         margin-left: .5rem;
+        color: $six;
     }
     
 }
