--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,3 +12,11 @@ h1 {
     font-size: 1rem;
     color: $four;
 }
+h2 {
+    font-size: 1rem;
+    color: $two;
+}
+h3 {
+    font-size: 1rem;
+    color: $three;
+}
