--- a/css/main.scss
+++ b/css/main.scss
@@ -8,10 +8,13 @@ $foreground-color: #b493b4;
 $text-color: $foreground-color;
 $zero: #221d24;
 $one: #a3409d;
+$two: #52634e;
+$three: #6d4b36;
 $four: #3e6b90;
 $five: #804394;
 $six: #169989;
 $eight: #373b41;
+$twelve: #52634e;
 $fifteen: #c5c8c6;
 $link-color: $one;
 
