--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -16,12 +16,12 @@ div .main {
 }
 
 #bg-img {
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
     z-index: -100;
-    opacity: 0.2;
+    opacity: 0.33;
     filter: alpha(opacity=20);
 }
 #bg-img h1 {
