Added shell prompt primitive

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,17 @@
       <div class="p1">
         <div class="main grd-row {{ page.title | slugify }}">
           <div class="grd-row-col-6">
-            <div style="display: none" id="content">
+            <div id="content">
+              <div class="prompt-space">
+                {% include prompt.html %}
+                <div style="color-fg">{{ page.command | default: 'cat README.md' }}</div>
+              </div>
+              
               {{ content }}
+              <div class="current-prompt">
+                {% include prompt.html %}
+                <input class="prompt-input" type="text" name="prompt" />
+              </div>
             </div>
             <div id="typein">
             </div>
@@ -24,21 +33,38 @@
 
   </body>
   <script type="text/javascript">
-    var i = 0;
-    var isTag, text;
-    var str = document.getElementById('content').innerHTML;
-    (function type() {
-      text = str.slice(0, ++i);
-      if (text === str) return;
-
-      document.getElementById('typein').innerHTML = text;
-
-      var char = text.slice(-1);
-      if( char === '<' ) isTag = true;
-      if( char === '>' ) isTag = false;
-
-      if (isTag) return type();
-      setTimeout(type, 1);
+    function promptHandler() {
+      $('.prompt-input').last().on('keypress', function (event) {
+        if(event.which === 13) {
+          $(this).attr("disabled", "disabled");
+          var content = $(this).parent().parent();
+          content.append('<br /><p>You entered a command</p>');
+          var clone = $(this).parent().clone(true);
+          var cloneInput = clone.find('.prompt-input');
+          cloneInput.removeAttr('disabled');
+          cloneInput.val('');
+          clone.appendTo(content);
+          cloneInput.focus();
+        }
+      })
+      .focus();
+    }
+    function fadeIn() {
+      var i = 0;
+      var isTag, text;
+      var str = $('#content').html();
+      (function type() {
+        i = i + 15;
+        text = str.slice(0, i);
+        $('#typein').html(text);
+        if (text === str) {
+          $('#content').remove();
+          promptHandler();
+          return;
+        }
+        setTimeout(type, 10);
       }());
+    }
+    fadeIn();
   </script>
 </html>
