--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $four: #3e6b90;
 $five: #804394;
 $six: #169989;
 $eight: #373b41;
-$twelve: #52634e;
+$twelve: #81a2be;
 $fifteen: #c5c8c6;
 $link-color: $one;
 
