--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,19 @@
 /**
  * Basic styling
  */
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+
 body {
     color: $text-color;
     background-color: $background-color;
@@ -19,4 +32,21 @@ h2 {
 h3 {
     font-size: 1rem;
     color: $three;
+}
+
+.color-fg {
+    color: $foreground-color;
+}
+
+.color-1 {
+    color: $one;
+}
+.color-2 {
+    color: $two;
+}
+.color-3 {
+    color: $three;
+}
+.color-12 {
+    color: $twelve;
 }
