--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,9 @@ $four: #3e6b90;
 $five: #804394;
 $six: #169989;
 $eight: #373b41;
+$eleven: #422400;
 $twelve: #81a2be;
+$fourteen: #8abeb7;
 $fifteen: #c5c8c6;
 $link-color: $one;
 
