--- a/css/main.scss
+++ b/css/main.scss
@@ -13,11 +13,16 @@ $three: #6d4b36;
 $four: #3e6b90;
 $five: #804394;
 $six: #169989;
+$seven: #707880;
 $eight: #373b41;
+$nine: #b52ead;
+$ten: #314c15;
 $eleven: #422400;
 $twelve: #81a2be;
+$thirteen: #b294bb;
 $fourteen: #8abeb7;
 $fifteen: #c5c8c6;
+
 $link-color: $one;
 
 @import url("https://fonts.googleapis.com/css?family=Raleway:900");
