Added new software rules image, fixed some code formatting and command line parsing

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,9 +1,14 @@
 /**
  * Syntax highlighting styles
  */
+code {
+    background-color: $eight;
+    text-size: 1rem;
+    font-family: 'VT323';
+    color: $six;
+}
 .highlight {
     background: #fff;
-
     .highlighter-rouge & {
       background: #eef;
     }
