--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -53,3 +53,19 @@ ul.post-list li {
         border: 1px dashed $nine;
         padding: 1rem;
 }
+
+#sl-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $background-color;
+    z-index: 9999;
+}
+#sl-mover {
+    position: absolute;
+    top: 50%;
+    right: -400px;
+    z-index: 10000;
+}
