Removed auto-everything from shell prompt

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
               {{ content }}
               <div class="current-prompt">
                 {% include prompt.html %}
-                <input class="prompt-input" type="text" name="prompt" />
+                <input autocomplete="off" autocorrect="off" autocapitalize="off" class="prompt-input" type="text" name="prompt" />
               </div>
             </div>
             <div id="typein">
