Added god mode and click navigation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="grd-row">
       <div class="grd-row-col-6-6 left-header">
         <h1>
-          carson@container:{{ page.url }} - {{ page.short_description | default: page.description }} (bash)
+          carson@<a href="/">container</a>:<span id="nav-path">{{ page.url }}</span> - {{ page.short_description | default: page.description }} (bash)
         </h1>
       </div>
     </div>
