Added post on Lambada

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,15 +15,15 @@ $four: #3e6b90;
 $five: #804394;
 $six: #169989;
 $seven: #707880;
-$eight: #373b41;
+$eight: #2a2d32;
 $nine: #b52ead;
 $ten: #314c15;
 $eleven: #422400;
 $twelve: #81a2be;
 $thirteen: #b294bb;
-$fourteen: #8abeb7;
+$fourteen: #79b2a8;
 $fifteen: #c5c8c6;
-
+$onethirty: #af5f00;
 $link-color: $one;
 @import url("https://fonts.googleapis.com/css?family=Raleway:900");
 @import url("https://fonts.googleapis.com/css?family=Cinzel");
