--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -5,49 +5,51 @@ code {
     background-color: $eight;
     text-size: 1rem;
     font-family: 'VT323';
-    color: $six;
+    color: $fourteen;
 }
 .highlight {
-    background: #fff;
+    background: $eight;
+    line-height: 1rem;
+    padding: .5rem;
     .highlighter-rouge & {
-      background: #eef;
+      background: $eight;
     }
 
-    .c     { color: #998; font-style: italic } // Comment
-    .err   { color: #a61717; background-color: #e3d2d2 } // Error
+    .c     { color: $four; font-style: italic } // Comment
+    .err   { color: $nine; background-color: #e3d2d2 } // Error
     .k     { font-weight: bold } // Keyword
     .o     { font-weight: bold } // Operator
-    .cm    { color: #998; font-style: italic } // Comment.Multiline
-    .cp    { color: #999; font-weight: bold } // Comment.Preproc
-    .c1    { color: #998; font-style: italic } // Comment.Single
-    .cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
-    .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-    .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
+    .cm    { color: $four; font-style: italic } // Comment.Multiline
+    .cp    { color: $four; font-weight: bold } // Comment.Preproc
+    .c1    { color: $four; font-style: italic } // Comment.Single
+    .cs    { color: $four; font-weight: bold; font-style: italic } // Comment.Special
+    .gd    { color: $zero; background-color: #fdd } // Generic.Deleted
+    .gd .x { color: $zero; background-color: #faa } // Generic.Deleted.Specific
     .ge    { font-style: italic } // Generic.Emph
-    .gr    { color: #a00 } // Generic.Error
-    .gh    { color: #999 } // Generic.Heading
-    .gi    { color: #000; background-color: #dfd } // Generic.Inserted
-    .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-    .go    { color: #888 } // Generic.Output
-    .gp    { color: #555 } // Generic.Prompt
+    .gr    { color: $nine } // Generic.Error
+    .gh    { color: $twelve } // Generic.Heading
+    .gi    { color: $zero; background-color: #dfd } // Generic.Inserted
+    .gi .x { color: $zero; background-color: #afa } // Generic.Inserted.Specific
+    .go    { color: $foreground-color } // Generic.Output
+    .gp    { color: $foreground-color } // Generic.Prompt
     .gs    { font-weight: bold } // Generic.Strong
-    .gu    { color: #aaa } // Generic.Subheading
-    .gt    { color: #a00 } // Generic.Traceback
+    .gu    { color: $onethirty } // Generic.Subheading
+    .gt    { color: $nine } // Generic.Traceback
     .kc    { font-weight: bold } // Keyword.Constant
     .kd    { font-weight: bold } // Keyword.Declaration
     .kp    { font-weight: bold } // Keyword.Pseudo
     .kr    { font-weight: bold } // Keyword.Reserved
-    .kt    { color: #458; font-weight: bold } // Keyword.Type
-    .m     { color: #099 } // Literal.Number
-    .s     { color: #d14 } // Literal.String
-    .na    { color: #008080 } // Name.Attribute
+    .kt    { color: $four; font-weight: bold } // Keyword.Type
+    .m     { color: $one } // Literal.Number
+    .s     { color: $one } // Literal.String
+    .na    { color: $six } // Name.Attribute
     .nb    { color: #0086B3 } // Name.Builtin
     .nc    { color: #458; font-weight: bold } // Name.Class
     .no    { color: #008080 } // Name.Constant
     .ni    { color: #800080 } // Name.Entity
-    .ne    { color: #900; font-weight: bold } // Name.Exception
-    .nf    { color: #900; font-weight: bold } // Name.Function
-    .nn    { color: #555 } // Name.Namespace
+    .ne    { color: $four; font-weight: bold } // Name.Exception
+    .nf    { color: $four; font-weight: bold } // Name.Function
+    .nn    { color: $onethirty } // Name.Namespace
     .nt    { color: #000080 } // Name.Tag
     .nv    { color: #008080 } // Name.Variable
     .ow    { font-weight: bold } // Operator.Word
