--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,6 +18,7 @@ body {
     color: $text-color;
     background-color: $background-color;
     font-family: $body-font;
+    max-width: 100vw;
 }
 
 h1 {
